crates/formatter/tests/snapshots/snapshots__coder__migrations__000167_workspace_agent_api_version.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents drop column api_version;
