crates/formatter/tests/snapshots/snapshots__coder__migrations__000167_workspace_agent_api_version.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents add column api_version text default '' not null;
