crates/formatter/tests/snapshots/snapshots__coder__migrations__000170_workspaceproxy_version.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_proxies add column version text default ''::text not null;
