crates/formatter/tests/snapshots/snapshots__coder__migrations__000174_rename_autolock.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type build_reason rename value 'dormancy' to 'autolock';
