crates/formatter/tests/snapshots/snapshots__coder__migrations__000174_rename_autolock.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type build_reason rename value 'autolock' to 'dormancy';
