crates/formatter/tests/snapshots/snapshots__coder__migrations__000175_add_user_theme_preference.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users drop column theme_preference;
