crates/formatter/tests/snapshots/snapshots__coder__migrations__000176_not_null_users_avatar_url.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update users set avatar_url = '' where avatar_url is null;

alter table users
	alter column avatar_url set not null,
	alter column avatar_url set default '';
